 - Speedup assembly over exterior facets by not using BoundaryMesh
 - Mesh refinement improvements, remove unecessary copying in Python interface
 - Clean PETSc and Epetra Krylov solvers
 - Add separate preconditioner classes for PETSc and Epetra solvers
 - Add function ident_zeros for inserting one on diagonal for zero rows
 - Add LU support for Trilinos interface
0.9.7 [2010-02-17]
 - Add support for specifying facet orientation in assembly over interior facets
 - Allow user to choose which LU package PETScLUSolver uses
 - Add computation of intersection between arbitrary mesh entities
 - Random access to MeshEntitiyIterators
 - Modify SWIG flags to prevent leak when using SWIG director feature
 - Fix memory leak in std::vector<Foo*> typemaps
 - Add interface for SCOTCH for parallel mesh partitioning
 - Bug fix in SubDomain::mark, fixes bug in DirichletBC based on SubDomain::inside
 - Improvements in time series class, recognizing old stored values
 - Add FacetCell class useful in algorithms iterating over boundary facets
 - Rename reconstruct --> extrapolate
 - Remove GTS dependency
0.9.6 [2010-02-03]
 - Simplify access to form compiler parameters, now integrated with global parameters
 - Add DofMap member function to return set of dofs
 - Fix memory leak in the LA interface
 - Do not import cos, sin, exp from NumPy to avoid clash with UFL functions
 - Fix bug in MTL4Vector assignment
 - Remove sandbox (moved to separate repository)
 - Remove matrix factory (dolfin/mf)
 - Update .ufl files for changes in UFL
 - Added swig/import/foo.i for easy type importing from dolfin modules
 - Allow optional argument cell when creating Expression
 - Change name of Expression argument cpparg --> cppcode
 - Add simple constructor (dim0, dim1) for C++ matrix Expressions
 - Add example demonstrating the use of cpparg (C++ code in Python)
 - Add least squares solver for dense systems (wrapper for DGELS)
 - New linear algebra wrappers for LAPACK matrices and vectors